--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/helper-module-imports": "^7.18.6",
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@sanity/client": "^3.3.3",
     "@sanity/image-url": "^1.0.1",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
